--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
             <h2>Gosto Musical</h2>
             <ul>
-             <li>Heavy/Power Metal,de Rainbow, Dio a Angra</li>
+             <li>O bom e velhor Rock, de Rainbow a FooFighters</li>
              <li>Trilhas Sonoras do Enio Morricone</li>
              <li>Música Clássica</li>
              <li>Aberturas de Anime</li>
@@ -41,7 +41,7 @@
     </section>
     </main>
     <footer>
-        <P>Desafio Vai na Web-Módulo 1</P>
+        <h5>Desafio Vai na Web-Módulo 1</h5>
     </footer>
     
 </body>
