correção no texto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
             <h2>Gosto Musical</h2>
             <ul>
-             <li>O bom e velhor Rock, de Rainbow a FooFighters</li>
+             <li>O bom e velho Rock, de Rainbow a FooFighters</li>
              <li>Trilhas Sonoras do Enio Morricone</li>
              <li>Música Clássica</li>
              <li>Aberturas de Anime</li>
