box-model ajustados,re-estilização de fonte e cores

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <figure>
-            <img src="./imagens/felipezardo-semfundo-circulo-fundoverde.png" alt="Foto de Felipe Zardo">
+            <img src="./imagens/felipezardo-semfundo-circulo-fundoverde.png">
         </figure>
         <h1>Felipe Zardo</h1>
     </header>
     <main>
         <p>Aspirante a desenvolvedor front-end, em busca de uma mudança significativa na carreira e autossuficiência.Adaptavel, fleumático e comunicativo, gosta de aprender tanto quanto ensinar. Voluntário servo de Cristo, marido e pai dedicado.Nerd a moda antiga.</p>
+        <a href="https://maps.app.goo.gl/41eyrKBhDpPrbK4y9" target="_blank">Ilha do Governador-Rio de Janeiro,RJ</a>
         
     <section>
             <div>   
