--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Sankofa+Display&display=swap" rel="stylesheet">
     <title>ZARDO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <figure>
-            <img src="./imagens/felipezardo-semfundo-circulo-fundoverde.png" >            
+            <img src="./imagens/inteira-removebg-preview.png" >            
         </figure>
         <h1>Felipe Zardo</h1>
     </header>
