ajuste no rodape

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://maps.app.goo.gl/41eyrKBhDpPrbK4y9" target="_blank">Ilha do Governador-Rio de Janeiro,RJ</a>
         
     <section>
-            <div>   
+            <div class="filmes">   
             <h2>Filmes Favoritos</h2>
             <ol>
              <li>Trilogia:O Senhor dos Anéis</li>
@@ -32,7 +32,7 @@
             </ol>
             </div>
 
-            <div>
+            <div class="musica">
             <h2>Gosto Musical</h2>
             <ul>
              <li>O bom e velho Rock, de Rainbow a FooFighters</li>
