adicionado alt a imagem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure>
-            <img src="./imagens/inteira-removebg-preview.png" >            
+            <img src="./imagens/inteira-removebg-preview.png" alt="foto de Felipe Zardo">            
         </figure>
         <h1>Felipe Zardo</h1>
     </header>
